--- a/index.html
+++ b/index.html
@@ -20,13 +20,18 @@
     <title>Portfofio Template</title>
   </head>
   <body>
+    <!-- Header -->
     <header class="header">
       <div class="header-logo"></div>
       <button class="button">Download CV</button>
     </header>
-    <main>
-      <aside></aside>
-      <div></div>
+
+    <main class="container">
+      <!-- Sidebar -->
+      <aside class="sidebar"></aside>
+      <!-- Content -->
+      <section class="content"></section>
+      <section class="avatar"></section>
     </main>
 
     <script type="module" src="main.js"></script>
