--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
           <i class="fa-solid fa-file"></i>
           <span>About me</span>
         </a>
+        <a href="#skills" class="sidebar-item">
+          <i class="fa-solid fa-trophy"></i>
+          <span>Skills</span>
+        </a>
         <a href="#experiences" class="sidebar-item">
           <i class="fa-solid fa-person-walking-luggage"></i>
           <span>Experiences</span>
@@ -46,17 +50,88 @@
           <span>Contact</span>
         </a>
       </aside>
+
       <!-- === Content === -->
       <section class="card content">
         <!-- About -->
-        <div id="about" class="content-item content-item-active about">About</div>
+        <div id="about" class="content-item content-item-active about">
+          <h1 class="title">About</h1>
+          <p class="subtitle">Frontend Developer</p>
+          <p class="paragraph about-intro">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores
+            obcaecati nostrum totam est reiciendis, possimus minima illum, enim
+            quia molestias corrupti, consequatur non. Quo tenetur esse quam
+            repellendus deleniti laudantium, odio ad eius, sed ut consectetur
+            obcaecati quia nesciunt maiores quidem, autem beatae sapiente
+            praesentium iure quaerat expedita est? Numquam?
+          </p>
+          <button class="button about-button">Download CV</button>
+          <div class="card about-card">
+            <div class="card-group">
+              <p class="group-label">Name</p>
+              <div class="group-info">Your name</div>
+            </div>
+            <div class="card-group">
+              <p class="group-label">Birthday</p>
+              <div class="group-info">Your birthday</div>
+            </div>
+            <div class="card-group">
+              <p class="group-label">Phone</p>
+              <div class="group-info">Your phone</div>
+            </div>
+            <div class="card-group">
+              <p class="group-label">Address</p>
+              <div class="group-info">Your address</div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Skills -->
+        <div id="skills" class="content-item skills">
+          <h1 class="title">Skills</h1>
+          <p class="subtitle">Combination of Education & Skills</p>
+          <div class="skills-group">
+            <div class="group-title">
+              <i class="fa-regular fa-circle-dot"></i>
+              <span>Education</span>
+            </div>
+            <div class="group-item">
+              <div class="item-head">
+                <p class="head-label">Frontend developer</p>
+                <p class="head-duration">2021 - 2025</p>
+              </div>
+              <p class="item-content">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse facere atque quos repellat. Repellat necessitatibus, repudiandae ipsa a beatae consectetur aut facilis suscipit possimus autem numquam enim eligendi odio ab animi ducimus, quis at nemo saepe minima labore nisi amet dolore non. Enim delectus quaerat, alias odio harum obcaecati magni?
+              </p>
+            </div>
+            <div class="group-item">
+              <div class="item-head">
+                <p class="head-label">Frontend developer</p>
+                <p class="head-duration">2021 - 2025</p>
+              </div>
+              <p class="item-content">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse facere atque quos repellat. Repellat necessitatibus, repudiandae ipsa a beatae consectetur aut facilis suscipit possimus autem numquam enim eligendi odio ab animi ducimus, quis at nemo saepe minima labore nisi amet dolore non. Enim delectus quaerat, alias odio harum obcaecati magni?
+              </p>
+            </div>
+          </div>
+        </div>
+
         <!-- Experiences -->
-        <div id="experiences" class="content-item experiences">Experiences</div>
+        <div id="experiences" class="content-item experiences">
+          <h1 class="title">Experiences</h1>
+        </div>
+
         <!-- Projects -->
-        <div id="projects" class="content-item projects">Projects</div>
+        <div id="projects" class="content-item projects">
+          <h1 class="title">Projects</h1>
+        </div>
+
         <!-- Contact -->
-        <div id="contact" class="content-item contact">Contact</div>
+        <div id="contact" class="content-item contact">
+          <h1 class="title">Contact</h1>
+        </div>
       </section>
+
       <!-- === Avatar === -->
       <section class="card avatar">
         <div class="avatar-view"></div>
