--- a/index.html
+++ b/index.html
@@ -95,23 +95,72 @@
               <i class="fa-regular fa-circle-dot"></i>
               <span>Education</span>
             </div>
-            <div class="group-item">
-              <div class="item-head">
-                <p class="head-label">Frontend developer</p>
-                <p class="head-duration">2021 - 2025</p>
+            <div class="group-subject">
+              <div class="subject-head">
+                <div class="head-label">
+                  <p>Frontend developer</p>
+                  <p>Codecademy</p>
+                </div>
+                <p class="head-year">2021 - 2025</p>
               </div>
-              <p class="item-content">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse facere atque quos repellat. Repellat necessitatibus, repudiandae ipsa a beatae consectetur aut facilis suscipit possimus autem numquam enim eligendi odio ab animi ducimus, quis at nemo saepe minima labore nisi amet dolore non. Enim delectus quaerat, alias odio harum obcaecati magni?
+              <p class="paragraph subject-content">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi
+                optio unde asperiores maiores aperiam accusamus saepe, odio
+                accusantium. Dolorum labore, placeat dolor molestias commodi ea
+                delectus minus laudantium beatae deserunt!
               </p>
             </div>
-            <div class="group-item">
-              <div class="item-head">
-                <p class="head-label">Frontend developer</p>
-                <p class="head-duration">2021 - 2025</p>
+             <div class="group-subject">
+              <div class="subject-head">
+                <div class="head-label">
+                  <p>Backend developer</p>
+                  <p>Codecademy</p>
+                </div>
+                <p class="head-year">2021 - 2025</p>
               </div>
-              <p class="item-content">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse facere atque quos repellat. Repellat necessitatibus, repudiandae ipsa a beatae consectetur aut facilis suscipit possimus autem numquam enim eligendi odio ab animi ducimus, quis at nemo saepe minima labore nisi amet dolore non. Enim delectus quaerat, alias odio harum obcaecati magni?
+              <p class="paragraph subject-content">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi
+                optio unde asperiores maiores aperiam accusamus saepe, odio
+                accusantium. Dolorum labore, placeat dolor molestias commodi ea
+                delectus minus laudantium beatae deserunt!
               </p>
+            </div>
+             <div class="group-subject">
+              <div class="subject-head">
+                <div class="head-label">
+                  <p>Fullstack developer</p>
+                  <p>Codecademy</p>
+                </div>
+                <p class="head-year">2021 - 2025</p>
+              </div>
+              <p class="paragraph subject-content">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi
+                optio unde asperiores maiores aperiam accusamus saepe, odio
+                accusantium. Dolorum labore, placeat dolor molestias commodi ea
+                delectus minus laudantium beatae deserunt!
+              </p>
+            </div>
+          </div>
+          <div class="skills-group">
+            <div class="group-title">
+              <i class="fa-regular fa-circle-dot"></i>
+              <span>Skills</span>
+            </div>
+            <div class="group-programming">
+              <div class="programming-language">
+                <div class="language-percent" data-progress="75">
+                  <div class="percent-number">75%</div>
+                  <div class="percent-bar"></div>
+                </div>
+                <p class="language-name">HTML</p>
+              </div>
+              <div class="programming-language">
+                <div class="language-percent" data-progress="70">
+                  <div class="percent-number">70%</div>
+                  <div class="percent-bar"></div>
+                </div>
+                <p class="language-name">CSS</p>
+              </div>
             </div>
           </div>
         </div>
@@ -138,6 +187,17 @@
         <div class="avatar-content">
           <p>Jack Anderson</p>
           <p>Frontend Developer</p>
+          <div class="content-socials">
+            <a href="#" target="_blank">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="#" target="_blank">
+              <i class="fa-brands fa-x-twitter"></i>
+            </a>
+            <a href="#" target="_blank">
+              <i class="fa-brands fa-square-instagram"></i>
+            </a>
+          </div>
         </div>
       </section>
     </main>
