--- a/index.html
+++ b/index.html
@@ -148,18 +148,32 @@
             </div>
             <div class="group-programming">
               <div class="programming-language">
-                <div class="language-percent" data-progress="75">
-                  <div class="percent-number">75%</div>
+                <div class="language-percent" data-progress="90">
+                  <div class="percent-number">90%</div>
                   <div class="percent-bar"></div>
                 </div>
                 <p class="language-name">HTML</p>
               </div>
               <div class="programming-language">
-                <div class="language-percent" data-progress="70">
-                  <div class="percent-number">70%</div>
+                <div class="language-percent" data-progress="80">
+                  <div class="percent-number">80%</div>
                   <div class="percent-bar"></div>
                 </div>
                 <p class="language-name">CSS</p>
+              </div>
+              <div class="programming-language">
+                <div class="language-percent" data-progress="75">
+                  <div class="percent-number">75%</div>
+                  <div class="percent-bar"></div>
+                </div>
+                <p class="language-name">Javascript</p>
+              </div>
+              <div class="programming-language">
+                <div class="language-percent" data-progress="75">
+                  <div class="percent-number">75%</div>
+                  <div class="percent-bar"></div>
+                </div>
+                <p class="language-name">ReactJs</p>
               </div>
             </div>
           </div>
