--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
         <!-- Experiences -->
         <div id="experiences" class="content-item experiences">
           <h1 class="title">Experiences</h1>
+          <p class="subtitle">My career's journey</p>
         </div>
 
         <!-- Projects -->
