--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 delectus minus laudantium beatae deserunt!
               </p>
             </div>
-             <div class="group-subject">
+            <div class="group-subject">
               <div class="subject-head">
                 <div class="head-label">
                   <p>Backend developer</p>
@@ -125,7 +125,7 @@
                 delectus minus laudantium beatae deserunt!
               </p>
             </div>
-             <div class="group-subject">
+            <div class="group-subject">
               <div class="subject-head">
                 <div class="head-label">
                   <p>Fullstack developer</p>
@@ -183,11 +183,88 @@
         <div id="experiences" class="content-item experiences">
           <h1 class="title">Experiences</h1>
           <p class="subtitle">My career's journey</p>
+          <div class="card experiences-card">
+            <div class="card-head">
+              <div class="head-job">
+                <p class="job-title">Frontend Developer</p>
+                <p class="job-company">Google</p>
+              </div>
+              <div class="head-year">2021 - 2025</div>
+            </div>
+            <p class="card-body">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum
+              minus temporibus et similique aliquam cum. Sit cum sunt sint
+              dolorum dolor officiis voluptate ratione doloribus deserunt minus,
+              nemo laudantium possimus?
+            </p>
+          </div>
+          <div class="card experiences-card">
+            <div class="card-head">
+              <div class="head-job">
+                <p class="job-title">Backend Developer</p>
+                <p class="job-company">Facebook</p>
+              </div>
+              <div class="head-year">2021 - 2025</div>
+            </div>
+            <p class="card-body">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum
+              minus temporibus et similique aliquam cum. Sit cum sunt sint
+              dolorum dolor officiis voluptate ratione doloribus deserunt minus,
+              nemo laudantium possimus?
+            </p>
+          </div>
         </div>
 
         <!-- Projects -->
         <div id="projects" class="content-item projects">
           <h1 class="title">Projects</h1>
+          <p class="subtitle">My projects that I've been worked</p>
+          <div class="projects-list">
+            <a href="#" target="_blank" class="list-wrapper">
+              <div class="wrapper-item">
+                <div class="item-image">
+                  <img src="/assets/web-app.svg" alt="project-image" />
+                </div>
+                <div class="item-info">
+                  <p class="info-name">Project name</p>
+                  <i class="fa-regular fa-eye"></i>
+                </div>
+              </div>
+            </a>
+            <a href="#" target="_blank" class="list-wrapper">
+              <div class="wrapper-item">
+                <div class="item-image">
+                  <img src="/assets/web-app.svg" alt="project-image" />
+                </div>
+                <div class="item-info">
+                  <p class="info-name">Project name</p>
+                  <i class="fa-regular fa-eye"></i>
+                </div>
+              </div>
+            </a>
+            <a href="#" target="_blank" class="list-wrapper">
+              <div class="wrapper-item">
+                <div class="item-image">
+                  <img src="/assets/web-app.svg" alt="project-image" />
+                </div>
+                <div class="item-info">
+                  <p class="info-name">Project name</p>
+                  <i class="fa-regular fa-eye"></i>
+                </div>
+              </div>
+            </a>
+            <a href="#" target="_blank" class="list-wrapper">
+              <div class="wrapper-item">
+                <div class="item-image">
+                  <img src="/assets/web-app.svg" alt="project-image" />
+                </div>
+                <div class="item-info">
+                  <p class="info-name">Project name</p>
+                  <i class="fa-regular fa-eye"></i>
+                </div>
+              </div>
+            </a>
+          </div>
         </div>
 
         <!-- Contact -->
