--- a/index.html
+++ b/index.html
@@ -270,6 +270,42 @@
         <!-- Contact -->
         <div id="contact" class="content-item contact">
           <h1 class="title">Contact</h1>
+          <p class="subtitle">Contact me to get your projects done</p>
+          <div class="contact-info">
+            <div class="info-group">
+              <div class="group-icon">
+                <i class="fa-solid fa-envelope"></i>
+              </div>
+              <div class="group-content">
+                <span>Phone</span>
+                <span>Your phone</span>
+              </div>
+            </div>
+            <div class="info-group">
+              <div class="group-icon">
+                <i class="fa-solid fa-phone"></i>
+              </div>
+              <div class="group-content">
+                <span>Email</span>
+                <span>Your email</span>
+              </div>
+            </div>
+            <div class="info-group">
+              <div class="group-icon">
+                <i class="fa-solid fa-location-dot"></i>
+              </div>
+              <div class="group-content">
+                <span>Address</span>
+                <span>Your address</span>
+              </div>
+            </div>
+          </div>
+          <form class="contact-form">
+            <input type="text" placeholder="Name" class="form-input" />
+            <input type="text" placeholder="Email" class="form-input" />
+            <textarea cols="30" rows="10" placeholder="Message" class="form-input"></textarea>
+            <button class="button form-button">Send</button>
+          </form>
         </div>
       </section>
 
