add avatar, logo, background animation

--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
   <body>
     <!-- ==== Header === -->
     <header class="header">
-      <div class="header-logo"></div>
+      <div class="header-logo">
+        <img class="image logo-image" src="/assets/logo.png" alt="logo" />
+      </div>
       <button class="button header-button">Download CV</button>
       <div class="header-mobile-info">
         <div class="info-name">Jack Anderson</div>
-        <div class="info-avatar"></div>
+        <div class="info-avatar">
+          <img class="image" src="/assets/avatar.png" alt="avatar">
+        </div>
       </div>
     </header>
 
@@ -342,7 +346,9 @@
 
       <!-- === Avatar === -->
       <section class="card avatar">
-        <div class="avatar-view"></div>
+        <div class="avatar-view">
+          <img class="image" src="/assets/avatar.png" alt="avatar">
+        </div>
         <div class="avatar-content">
           <p>Jack Anderson</p>
           <p>Frontend Developer</p>
@@ -359,6 +365,9 @@
           </div>
         </div>
       </section>
+
+      <!-- === Background animation === -->
+       <div class="squares"></div>
     </main>
 
     <script type="module" src="main.js"></script>
