add mouse cursor

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/assets/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,7 +18,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Portfofio Template</title>
+    <title>Jack Anderson</title>
   </head>
   <body>
     <!-- ==== Header === -->
@@ -29,7 +30,7 @@
       <div class="header-mobile-info">
         <div class="info-name">Jack Anderson</div>
         <div class="info-avatar">
-          <img class="image" src="/assets/avatar.png" alt="avatar">
+          <img class="image" src="/assets/avatar.png" alt="avatar" />
         </div>
       </div>
     </header>
@@ -347,7 +348,7 @@
       <!-- === Avatar === -->
       <section class="card avatar">
         <div class="avatar-view">
-          <img class="image" src="/assets/avatar.png" alt="avatar">
+          <img class="image" src="/assets/avatar.png" alt="avatar" />
         </div>
         <div class="avatar-content">
           <p>Jack Anderson</p>
@@ -367,7 +368,12 @@
       </section>
 
       <!-- === Background animation === -->
-       <div class="squares"></div>
+      <div class="squares"></div>
+
+      <!-- === Mouse cursor === -->
+      <div class="cursor">
+        <div class="cursor-dot"></div>
+      </div>
     </main>
 
     <script type="module" src="main.js"></script>
