--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         <div class="header-logo">
           <img class="image logo-image" src="/assets/logo.png" alt="logo" />
         </div>
-        <button class="button header-button" aria-label="Download my CV">Download CV</button>
+        <button class="button header-button" aria-label="Download my CV">
+          Download CV
+        </button>
         <div class="header-mobile-info">
           <div class="info-name">Jack Anderson</div>
           <div class="info-avatar">
@@ -113,7 +115,9 @@
               consectetur obcaecati quia nesciunt maiores quidem, autem beatae
               sapiente praesentium iure quaerat expedita est? Numquam?
             </p>
-            <button class="button about-button" aria-label="Download my CV">Download CV</button>
+            <button class="button about-button" aria-label="Download my CV">
+              Download CV
+            </button>
             <div class="card about-card">
               <div class="card-group">
                 <p class="group-label">Name</p>
@@ -348,30 +352,41 @@
                 </div>
               </div>
             </div>
-            <form class="contact-form">
-              <input
-                type="text"
-                placeholder="Name"
-                class="form-input"
-                aria-label="Your name"
-                required
-              />
-              <input
-                type="email"
-                placeholder="Email"
-                class="form-input"
-                aria
-                label="Your email"
-                required
-              />
-              <textarea
-                required
-                cols="30"
-                rows="10"
-                placeholder="Message"
-                class="form-input"
-                aria-label="Your message"
-              ></textarea>
+            <form id="form" action="#" class="contact-form">
+              <div class="form-group">
+                <input
+                  id="name"
+                  type="text"
+                  name="name"
+                  placeholder="Name"
+                  class="group-input"
+                  aria-label="Your name"
+                />
+                <small class="group-error-message"></small>
+              </div>
+              <div class="form-group">
+                <input
+                  id="email"
+                  type="text"
+                  name="email"
+                  placeholder="Email"
+                  class="group-input"
+                  aria-label="Your email"
+                />
+                <small class="group-error-message"></small>
+              </div>
+              <div class="form-group">
+                <textarea
+                  id="message"
+                  cols="30"
+                  rows="10"
+                  name="message"
+                  placeholder="Message"
+                  class="group-input"
+                  aria-label="Your message"
+                ></textarea>
+                <small class="group-error-message"></small>
+              </div>
               <button class="button form-button" type="submit">Send</button>
             </form>
           </div>
