--- a/index.html
+++ b/index.html
@@ -43,9 +43,14 @@
         <div class="header-logo">
           <img class="image logo-image" src="/assets/logo.png" alt="logo" />
         </div>
-        <button class="button header-button" aria-label="Download my CV">
+        <a
+          class="button header-button"
+          href="/assets/cv/jack.pdf"
+          download="CV - Jack Anderson"
+          aria-label="Download my CV"
+        >
           Download CV
-        </button>
+        </a>
         <div class="header-mobile-info">
           <div class="info-name">Jack Anderson</div>
           <div class="info-avatar">
@@ -115,9 +120,14 @@
               consectetur obcaecati quia nesciunt maiores quidem, autem beatae
               sapiente praesentium iure quaerat expedita est? Numquam?
             </p>
-            <button class="button about-button" aria-label="Download my CV">
+            <a
+              class="button about-button"
+              href="/assets/cv/jack.pdf"
+              download="CV - Jack Anderson"
+              aria-label="Download my CV"
+            >
               Download CV
-            </button>
+            </a>
             <div class="card about-card">
               <div class="card-group">
                 <p class="group-label">Name</p>
